deployment/bucket-wrapper-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bucket-wrapper
  namespace: dev
  labels:
    app.kubernetes.io/instance: bucket-wrapper
    app.kubernetes.io/name: bucket-wrapper
spec:
  strategy:
    rollingUpdate:
      maxUnavailable: 0
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: bucket-wrapper
      app.kubernetes.io/name: bucket-wrapper
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: bucket-wrapper
        app.kubernetes.io/name: bucket-wrapper
    spec:
      serviceAccountName: bucket-wrapper
      containers:
      - name: bucket-wrapper
        #image: 'registry.gitlab.eox.at/eox/hub/bucket-wrapper:0.8.5'
        image: bucket-wrapper-k8s:0
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /probe
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /probe
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
        resources:
          limits:
            cpu: 0.5
            memory: 512Mi
          requests:
            cpu: 0.05
            memory: 128Mi
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
