deployment/bucket-wrapper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bucket-wrapper
  namespace: dev
  labels:
    app.kubernetes.io/instance: bucket-wrapper
    app.kubernetes.io/name: bucket-wrapper
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: bucket-wrapper
    app.kubernetes.io/name: bucket-wrapper
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
